tests/tests/errors/2006-40.vb
'#compiler-options:/resource:
'#compiler-message:Command line error BC2006 : option 'resource' requires ':<resinfo>'
'#exit-code:1